--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 coverage = "^6.4"
+mypy = "^0.960"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
