--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["_Anti_"]
 [tool.poetry.dependencies]
 python = "^3.9"
 SQLAlchemy = "^1.4.36"
+sqlalchemy-stubs = "^0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
