--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["_Anti_"]
 python = "^3.9"
 SQLAlchemy = "^1.4.36"
 sqlalchemy-stubs = "^0.4"
+fastapi = {extras = ["all"], version = "^0.78.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
