--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 SQLAlchemy = "^1.4.36"
 sqlalchemy-stubs = "^0.4"
 fastapi = {extras = ["all"], version = "^0.78.0"}
+psycopg2-binary = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
