--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ psycopg2-binary = "^2.9.3"
 pytest = "^7.1.2"
 coverage = "^6.4"
 mypy = "^0.960"
+pathlib = "^1.0.1"
+requests = "^2.27.1"
+types-requests = "^2.27.30"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
