--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,47 @@ jobs:
       matrix:
         python-version: [ 3.9 ]
 
+    environment: test
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      TITLE: ${{ secrets.TITLE }}
+      VERSION: ${{ secrets.VERSION }}
+      DESCRIPTION: ${{ secrets.DESCRIPTION }}
+      API_URL: ${{ secrets.API_URL }}
+
+      DB_NAME: ${{ secrets.POSTGRES_USER }}
+      DB_USER: ${{ secrets.POSTGRES_USER }}
+      DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      DB_HOST: localhost
+      DB_PORT: 5432
+
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install Dependencies
         run: make install
-      - name: Tests
-        run: make test
+
+      - name: Mypy
+        run: make mypy
+
+      - name: Pytest
+        run: make pytest
