--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ SQLAlchemy = "^1.4.36"
 sqlalchemy-stubs = "^0.4"
 fastapi = {extras = ["all"], version = "^0.78.0"}
 psycopg2-binary = "^2.9.3"
+celery = "^5.2.7"
+flower = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
