--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = {extras = ["all"], version = "^0.78.0"}
 psycopg2-binary = "^2.9.3"
 celery = "^5.2.7"
 flower = "^1.0.0"
+celery-types = "^0.13.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
