--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,3 +61,27 @@ services:
       - configs/config.app.env
       - configs/config.db.env
       - configs/config.celery.env
+
+  # For development
+  flower:
+    container_name: flower
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    depends_on:
+      - worker
+    ports:
+      - "5555:5555"
+    command: make flower
+    volumes:
+      - ./:/app
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - CELERY_HOST=rabbitmq
+      - CELERY_PORT=5672
+      - CELERY_RESULT=rpc://
+    env_file:
+      - configs/config.app.env
+      - configs/config.db.env
+      - configs/config.celery.env
