Added networks in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - configs/config.docker.db.env
     ports:
       - "5431:5431"
+    networks:
+      - backend
 
   rabbitmq:
     container_name: rabbitmq
@@ -16,6 +18,8 @@ services:
       - configs/config.docker.worker.env
     ports:
       - "5672:5672"
+    networks:
+      - backend
 
   api:
     container_name: api
@@ -40,6 +44,8 @@ services:
       - configs/config.db.env
       - configs/config.celery.env
       - configs/config.email.env
+    networks:
+      - backend
 
   worker:
     container_name: worker
@@ -63,6 +69,8 @@ services:
       - configs/config.db.env
       - configs/config.celery.env
       - configs/config.email.env
+    networks:
+      - backend
 
   # For development
   flower:
@@ -88,3 +96,8 @@ services:
       - configs/config.db.env
       - configs/config.celery.env
       - configs/config.email.env
+    networks:
+      - backend
+
+networks:
+  backend:
