--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = {extras = ["all"], version = "^0.78.0"}
 psycopg2-binary = "^2.9.3"
 celery = "^5.2.7"
 celery-types = "^0.13.1"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+types-passlib = "^1.7.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
