--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches:
       - master
-      - dev
+      - 'releases/**'
   pull_request:
     branches:
       - master
       - dev
+      - 'releases/**'
 
 jobs:
   test:
