--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ celery = "^5.2.7"
 celery-types = "^0.13.1"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 types-passlib = "^1.7.7"
+pymongo = "^4.1.1"
+mongo-types = "^0.15.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
