Added mongo in config.py

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /configs/config.docker.db.env
 /configs/config.docker.worker.env
 /configs/config.email.env
+/configs/config.mongo.env
+/configs/config.docker.mongo.env
