--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ celery-types = "^0.13.1"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 types-passlib = "^1.7.7"
 pymongo = "^4.1.1"
+PyJWT = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
